# cen3031-python-lab

./: .gitignore  README.md  pyproject.toml
app/: data.py  lab.py  main.py
tests/: test_lab.py
