[project]
name = "cop3031-python-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
all = "app.main:run_all"
problem-1 = "app.main:run_problem_1"
problem-2 = "app.main:run_problem_2"
problem-3 = "app.main:run_problem_3"
problem-4 = "app.main:run_problem_4"
bonus = "app.main:run_bonus"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]